Corrinfo bug na exibição das imagens

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <canvas id="tela" width="600" height="500"></canvas> 
 
         <div class="bonecosForca">
-            <img id="boneco0" src="/Forca/imagens/parte 0.PNG" alt="Pronto para inicar o jogo">
-            <img id="boneco1" src="/Forca/imagens/parte 1.PNG" alt="Cabeça do boneco">
-            <img id="boneco2" src="/Forca/imagens/parte 2.PNG" alt="corpo do boneco">
-            <img id="boneco3" src="/Forca/imagens/parte 3.PNG" alt="braço esquerdo">
-            <img id="boneco4" src="/Forca/imagens/parte 4.PNG" alt="braço direito">
-            <img id="boneco5" src="/Forca/imagens/parte 5.PNG" alt="perna esquerda">
-            <img id="boneco6" src="/Forca/imagens/parte 6.PNG" alt="corpo completo do boneco">
+            <img id="boneco0" src="imagens/parte 0.PNG" alt="Pronto para inicar o jogo">
+            <img id="boneco1" src="imagens/parte 1.PNG" alt="Cabeça do boneco">
+            <img id="boneco2" src="imagens/parte 2.PNG" alt="corpo do boneco">
+            <img id="boneco3" src="imagens/parte 3.PNG" alt="braço esquerdo">
+            <img id="boneco4" src="imagens/parte 4.PNG" alt="braço direito">
+            <img id="boneco5" src="imagens/parte 5.PNG" alt="perna esquerda">
+            <img id="boneco6" src="imagens/parte 6.PNG" alt="corpo completo do boneco">
         </div>   
         <div id="container-interacao">
             <h1 class="titulo">Apenas essas Teclas São permitadas</h1>
